Revert "Revert "Correct share spacing on post cards""

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -562,9 +562,9 @@ a:focus {
 
 .post-card__share {
   text-align: center;
-  margin-top: 0.75rem;
-  padding-top: 0.5rem;
-  margin-bottom: 0.25rem;
+  margin-top: 1.75rem;
+  padding-top: 0;
+  margin-bottom: 0.75rem;
 }
 
 .post-card__share > summary {
